--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "python-dotenv",
     "tenacity",
     "pydantic",
+    "feedparser>=6.0.0",
+    "beautifulsoup4>=4.12.0",
+    "sendgrid>=6.11.0",
     ]
 
 [build-system]
@@ -54,5 +57,5 @@ test = [
 #]
 
 [project.scripts]
-arxiv-sanity-bot = "arxiv_sanity_bot.cli.arxiv_sanity_bot:bot"
+arxiv-sanity-bot = "arxiv_sanity_bot.cli.arxiv_sanity_bot:cli"
 
