--- a/.github/workflows/daily-digest.yml
+++ b/.github/workflows/daily-digest.yml
@@ -40,11 +40,11 @@ jobs:
     - name: Install uv
       uses: astral-sh/setup-uv@v4
       with:
-        enable-cache: true
+        enable-cache: false
 
     - name: Install dependencies
       run: |
-        uv sync
+        uv sync --no-cache
 
     - name: Run AI Daily Digest
       env:
