--- a/.github/workflows/daily-digest.yml
+++ b/.github/workflows/daily-digest.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Run AI Daily Digest
       env:
         # LLM Configuration
-        LLM_PROVIDER: ${{ secrets.LLM_PROVIDER || 'openai' }}
+        LLM_PROVIDER: ${{ secrets.LLM_PROVIDER || 'deepseek' }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
         DEEPSEEK_API_BASE: ${{ secrets.DEEPSEEK_API_BASE }}
