--- a/web/vercel.json
+++ b/web/vercel.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "framework": "vite"
+  "framework": "vite",
+  "outputDirectory": "dist"
 }
