--- a/web/vercel.json
+++ b/web/vercel.json
@@ -2,10 +2,5 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
   "framework": "vite",
-  "outputDirectory": "dist",
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.+)", "dest": "/index.html" },
-    { "src": "/", "dest": "/index.html" }
-  ]
+  "outputDirectory": "dist"
 }
